--- a/301-class-01.md
+++ b/301-class-01.md
@@ -1,3 +1,59 @@
 [Home](README.md) > [Code 301 Topic Notes](301topicNotes.md)
 
 # Class 01
+
+## Component-Based Architecture
+
+**Component-based architecture** breaks down the design of code into individual functional or logical components that represent interfaces which contain methods, events, and properties. This divides larger problems into sub-problems, associated with component partitions. The purpose of this idea is to enable component reusability. The way I think of this, is like a modular device such as a custom-built computer. You can add hardware to the motherboard that has self-contained functions for the computer.
+
+Some advantages of component-based architecture:
+
+- Reduced time/development by reusing components
+- Increased reliability–you know the component already works!
+
+Component Definition:
+
+- Components are software objects that are designed to interact with other components. I think of them a little like software legos. They are modular, replaceable, reusable, and portable sets of well-defined functionality.
+
+There are three different ways to view components:
+
+1. Object-oriented view
+2. Conventional view
+3. Process-related view
+
+Characteristics of Components:
+
+- Reusability (components can usually be reused in different applications)
+- Replaceable (can be substituted with other, similar components)
+- Not context-specific (components designed to be operated in different environments and contexts)
+- Extensible (can be extended by different components to change behavior)
+- Encapsulated (they don’t expose internal processes or variables)
+- Independent (minimal dependencies on other components)
+
+Advantages:
+
+- Ease of deployment (easy to swap out new, compatible versions)
+- Reduced cost (use of third-party components reduce dev and maintenance costs)
+- Development Ease (well known functionality and interfaces already exist)
+- Reusable
+- Modification of technical complexity
+- Reliability (System reliability is increased because of individual component reliability)
+- System maintenance and evolution (easy to change and modify without affecting the rest of the system)
+- Independent
+
+## Props in React JS
+
+**Props** is the way to pass data between components (when they need to communicate). “Props” is a special keyword in React, which stands for *properties*.
+
+Data with props is passed in a *uni-directional flow* (one way from parent to child). Additionally, data from props is *read only*, meaning that data coming from a parent should not be changed by its children.
+
+To use Props:
+
+1. Define an attribute and its value
+2. Pass it to child components using Props
+3. Render Props data
+
+Sources:
+
+- [Tutorials Point](https://www.tutorialspoint.com/software_architecture_design/component_based_architecture.htm)
+- [ITNEXT](https://itnext.io/what-is-props-and-how-to-use-it-in-react-da307f500da0)
