completed class03 reading notes

--- a/code301Notes/301-class-03.md
+++ b/code301Notes/301-class-03.md
@@ -6,32 +6,88 @@
 
 What does .map() return?
 
+- .map() returns an array
+
 If I want to loop through an array and display each value in JSX, how do I do that in React?
 
-Each list item needs a unique ____.
+- We could use the .map() function and return a <li> element for each item. We could then assign the new array of items to render inside of a <ul> element.
+
+Each list item needs a unique ___.
+
+- Each list item needs a unique key.
 
 What is the purpose of a key?
+
+- The purpose of a key is to help React identify which items have changed, or are added or removed. It gives elements a stable identity within an array. The best way to pick a key is often to use a string that uniquely IDs/differentiates an item from its siblings. They do not need to be globally unique. A good rule of thumb for when you would need a key are elements inside of the .map() call.
 
 ### React Docs - Lists and Keys
 
 What is the spread operator?
 
-List 4 things that the spread operator can do
-.
-Give an example of using the spread operator to combine two arrays.
+- Spread syntax is when an ellipsis of three dots is used to expand iterable objects into a list of arguments.
 
-Give an example of using the spread operator to add a new item to an array.
+List 4 things that the spread operator can do.
 
-Give an example of using the spread operator to combine two objects into one.
+1. Find the largest item in an array with Math.max()! Otherwise it will result in NaN.
+2. Copying an array
+3. Concatenating or combining arrays
+4. Other Math functions
+5. Adding items to lists/adding states to React
+6. Combining Objects
+
+- In all of these cases, spread expands an iterable object (usually an array). Can be used on any iterable...for example: a string.
 
 ### The Spread Operator
 
+Give an example of using the spread operator to combine two arrays.
+
+```
+const awesomeArr = ['A','B','C']
+const radArr = ['D','E','F']
+const groovyArr = [...awesomeArr,...radArr]
+console.log(groovyArr) // A B C D E F
+```
+
+Give an example of using the spread operator to add a new item to an array.
+
+```
+const sportArr = ['hockey','football','basketball']
+const moreSport = ['baseball',...sportArr]
+console.log(moreSport) // baseball, hockey, football, basketball
+```
+
+Give an example of using the spread operator to combine two objects into one.
+
+```
+const firstObject = {vibe: "chill"}
+const secondObject = {mood: "thoughtful"}
+const thirdObject = {...firstObject,...secondObject, hungry: "no"}
+```
+
+### How to Pass Functions Between Components
+
 In the video, what is the first step that the developer does to pass functions between components?
+
+- The first thing he did was create an increment function where the state was that he wanted to change.
 
 In your own words, what does the increment function do?
 
+- The increment function passes in an object to loop through an array, match it with the specific one we want to update, and update the count based on which name is selected (passed in). It then increments the count of the object.
+
 How can you pass a method from a parent component into a child component?
+
+- It can be passed in with props.
 
 How does the child component invoke a method that was passed to it from a parent component?
 
-### How to Pass Functions Between Components
+- In the object, the method was passed with "this.props.object" and then called in a function.
+
+### Things I Want to Learn More About
+
+- My main focus on this class was absolutely with utilizing those keys and with practicing functions. I feel like both did an excellent job of explaining what was going on, I just need to get my hands dirty now and learn through getting reps and gaining experience.
+
+### Sources
+
+- [List and Keys](https://reactjs.org/docs/lists-and-keys.html)
+- [Spread Operator](https://medium.com/coding-at-dawn/how-to-use-the-spread-operator-in-javascript-b9e4a8b06fab)
+- [Passing Functions Between Components](https://www.youtube.com/watch?v=c05OL7XbwXU)
