Finished class 04 reading notes

--- a/code301Notes/301-class-04.md
+++ b/code301Notes/301-class-04.md
@@ -12,18 +12,35 @@ What is a 'Controlled Component'?
 
 Should we wait to store the users responses from the form into state when they submit the form OR should we update the state with their responses as soon as they enter them? Why.
 
-
+- The state is updated with every stroke the user types because the React State is the single source of truth. I think it is important to do because then we can use the value in other UI elements or reset them from different event handlers.
 
 How do we target what the user is entering if we have an event handler on an input field?
+
+- Our event handler will use `setState` to `event.target.value`.
 
 ### The Conditional (Ternary) Operator
 
 Why would we use a ternary operator?
 
+- We use the ternary operator to convert our `if` statements to be one line of code!
+
 Rewrite the following statement using a ternary statement:
 
-```if(x===y){
+```
+if(x===y){
   console.log(true);
 } else {
   console.log(false);
-}```
+}
+```
+
+`const truth = x === y ? 'true' : 'false';`
+
+### Things I Want to Know More About
+
+- I want to get hands on and practice used controlled components. I understand the idea, but will need to put it use to see how it works.
+
+### Sources
+
+- [React Forms](https://reactjs.org/docs/forms.html)
+- [Ternary Operator](https://codeburst.io/javascript-the-conditional-ternary-operator-explained-cac7218beeff)
