adds notes from node.js video tutorial

--- a/code301Notes/301-class-09.md
+++ b/code301Notes/301-class-09.md
@@ -29,6 +29,29 @@ What is Referential transparency?
 - If a function consistently yields the same result for the same input, it meets the criteria.
 - **pure function + immutable data = referential transparency**
 
+## Node JS Tutorial
+
+### What is a module?
+
+- A module seems to be like a component in React. We split up our code in Node JS into modules based on their functionality to keep our code modular and easy to work with (it's another JS file).
+
+### What does the word ‘require’ do?
+
+- It is in the global object of Node.JS. We use the word require to call a module that we require in another file.
+
+### How do we bring another module into the file the we are working in?
+
+Component we want to bring it in on:
+- `var example = require('./example)`
+
+Component it came from:
+- `module.exports = example;`
+
+### What do we have to do to make a module available?
+
+- We have to specify what we want to export from that module, and assign it to a variable on the component we would like to use it on when we 'require' it.
+
+
 ## Things I Want to Know More About
 
 - It seems like we are starting to flirt with some of the methods that are commonly used in functional programming. I would like to more about the efficiency of functional programming vs object-oriented, and better understand the idea that passing the same parameters in an object oriented function will not always yield the same result--those I suppose that is because the data is ultimately mutable, and a variable could change its value.
@@ -37,3 +60,4 @@ What is Referential transparency?
 ## Sources
 
 - [Concepts of Functional Programming](https://medium.com/the-renaissance-developer/concepts-of-functional-programming-in-javascript-6bc84220d2aa)
+- [Node JS for Beginners](https://www.youtube.com/watch?v=xHLd36QoS4k)
