fixes broken links due to folder integration

--- a/code301Notes/301-class-01.md
+++ b/code301Notes/301-class-01.md
@@ -1,4 +1,4 @@
-[Home](README.md) > [Code 301 Topic Notes](301topicNotes.md)
+[Home](../README.md) > [Code 301 Topic Notes](../301topicNotes.md)
 
 # Class 01
 
