updates headings for readability

--- a/code301Notes/301-class-01.md
+++ b/code301Notes/301-class-01.md
@@ -6,22 +6,22 @@
 
 **Component-based architecture** breaks down the design of code into individual functional or logical components that represent interfaces which contain methods, events, and properties. This divides larger problems into sub-problems, associated with component partitions. The purpose of this idea is to enable component reusability. The way I think of this, is like a modular device such as a custom-built computer. You can add hardware to the motherboard that has self-contained functions for the computer.
 
-Some advantages of component-based architecture:
+### Some advantages of component-based architecture:
 
 - Reduced time/development by reusing components
 - Increased reliability–you know the component already works!
 
-Component Definition:
+### Component Definition:
 
 - Components are software objects that are designed to interact with other components. I think of them a little like software legos. They are modular, replaceable, reusable, and portable sets of well-defined functionality.
 
-There are three different ways to view components:
+### There are three different ways to view components:
 
 1. Object-oriented view
 2. Conventional view
 3. Process-related view
 
-Characteristics of Components:
+### Characteristics of Components:
 
 - Reusability (components can usually be reused in different applications)
 - Replaceable (can be substituted with other, similar components)
@@ -30,7 +30,7 @@ Characteristics of Components:
 - Encapsulated (they don’t expose internal processes or variables)
 - Independent (minimal dependencies on other components)
 
-Advantages:
+### Advantages:
 
 - Ease of deployment (easy to swap out new, compatible versions)
 - Reduced cost (use of third-party components reduce dev and maintenance costs)
@@ -47,13 +47,13 @@ Advantages:
 
 Data with props is passed in a *uni-directional flow* (one way from parent to child). Additionally, data from props is *read only*, meaning that data coming from a parent should not be changed by its children.
 
-To use Props:
+### To use Props:
 
 1. Define an attribute and its value
 2. Pass it to child components using Props
 3. Render Props data
 
-Sources:
+## Sources
 
 - [Tutorials Point](https://www.tutorialspoint.com/software_architecture_design/component_based_architecture.htm)
 - [ITNEXT](https://itnext.io/what-is-props-and-how-to-use-it-in-react-da307f500da0)
