--- a/code301Notes/301-class-02.md
+++ b/code301Notes/301-class-02.md
@@ -11,9 +11,9 @@ This subject matters because it is detailing the lifecycle of a component, and w
 3. constructor, render, react updates, componentDidMount, componentWillUnmount'
 4. componentDidMount is invoked immediately after a component is mounted. It is a good place to load network requests or initialize the DOM.
 
-### React: Component Lifecycle Events
+## React: Component Lifecycle Events
 
-Component lifecycle events can be described in three phases:
+### Component lifecycle events can be described in three phases:
 
 1. Mounting: An instance of a component is being created and inserted into the DOM. Other things that occur during this phase are: constructors, render, etc.
 
@@ -29,18 +29,18 @@ Information for additional methods such as: componentDidMount(), shouldComponent
 
 Source: [Medium](https://medium.com/@joshuablankenshipnola/react-component-lifecycle-events-cb77e670a093)
 
-### React States Vs Props
+## React States Vs Props
 
-What types of things can you pass in the props?
+### What types of things can you pass in the props?
 - Initial count for a counter inside of a component, displaying something to a user that has a title or subtitle.
 
-What is the big difference between props and state?
+### What is the big difference between props and state?
 - You pass props into a component from the outside (like arguments for a function), state is handled inside of that component. When you change the state inside of an application, it will rerender that part of the application, whereas props must be changed outside of it.
 
-When do we re-render our application?
+### When do we re-render our application?
 - When the state changes inside of our application based on something the user has done.
 
-What are some examples of things that we could store in state?
+### What are some examples of things that we could store in state?
 - A counter that we update, items inside of a form that need to be updated by the user (such as a checkbox), whenever information is handled inside of a component.
 
 Source: [Web Dev Simplified](https://www.youtube.com/watch?v=IYvD9oBCuJI)
