--- a/code301Notes/301-class-04.md
+++ b/code301Notes/301-class-04.md
@@ -6,25 +6,25 @@
 
 ### React Docs - Forms
 
-What is a 'Controlled Component'?
+### What is a 'Controlled Component'?
 
 - A **controlled component** is an input form element in React whose value is controlled and set by React as the "single source of truth". With a controlled component, the input's value is *always* driven by the React state of the component.
 
-Should we wait to store the users responses from the form into state when they submit the form OR should we update the state with their responses as soon as they enter them? Why.
+### Should we wait to store the users responses from the form into state when they submit the form OR should we update the state with their responses as soon as they enter them? Why.
 
 - The state is updated with every stroke the user types because the React State is the single source of truth. I think it is important to do because then we can use the value in other UI elements or reset them from different event handlers.
 
-How do we target what the user is entering if we have an event handler on an input field?
+### How do we target what the user is entering if we have an event handler on an input field?
 
 - Our event handler will use `setState` to `event.target.value`.
 
 ### The Conditional (Ternary) Operator
 
-Why would we use a ternary operator?
+### Why would we use a ternary operator?
 
 - We use the ternary operator to convert our `if` statements to be one line of code!
 
-Rewrite the following statement using a ternary statement:
+### Rewrite the following statement using a ternary statement:
 
 ```
 if(x===y){
