--- a/code301Notes/301-class-05.md
+++ b/code301Notes/301-class-05.md
@@ -4,25 +4,25 @@
 
 ## React Docs - Thinking in React
 
-What is the single responsibility principle and how does it apply to components?
+### What is the single responsibility principle and how does it apply to components?
 
 - The single responsibility principle is that components should ideally only do one thing. If it grows beyond that, it should be broken up into smaller subcomponents.
 
-What does it mean to build a ‘static’ version of your application?
+### What does it mean to build a ‘static’ version of your application?
 
 - Static means it displays your UI, but does not have any functionality.
 
-Once you have a static application, what do you need to add?
+### Once you have a static application, what do you need to add?
 
 - To build the static application, you're building all of the components that you will need to make up your UI. From there, you have to add functionality and the data that is actually being processed/rendered.
 
-What are the three questions you can ask to determine if something is state?
+### What are the three questions you can ask to determine if something is state?
 
 1. Is it passed from a parent via props?
 2. Does it remain unchanged over time?
 3. Can you compute it based on any other state or props in your component?
 
-How can you identify where state needs to live?
+### How can you identify where state needs to live?
 
 - ID every component that renders something based on the state.
 - Find common owner component
@@ -31,15 +31,15 @@ How can you identify where state needs to live?
 
 ## Higher-Order Functions
 
-What is a “higher-order function”?
+### What is a “higher-order function”?
 
 - A higher-order function is a function that operates on other functions, either by taking them in as arguments or by returning them.
 
-Explore the greaterThan function as defined in the reading. In your own words, what is line 2 of this function doing?
+### Explore the greaterThan function as defined in the reading. In your own words, what is line 2 of this function doing?
 
 - Line 2 is checking to see if the value passed as an argument is going to be greater than the defined value.
 
-Explain how either map or reduce operates, with regards to higher-order functions.
+### Explain how either map or reduce operates, with regards to higher-order functions.
 
 - Map works by declaring a new variable that is an empty array, goes through an existing array, applies a function to all of the elements in that array, and pushes them back into an array after being transformed with the introduced function.
 
