--- a/code301Notes/301-class-07.md
+++ b/code301Notes/301-class-07.md
@@ -4,31 +4,31 @@
 
 ## REST
 
-Who is Roy Fielding?
+### Who is Roy Fielding?
 
 - Roy Fielding helped write the first web servers, doing a lot of research to explain exactly why the web works the way it does. He helped write HTTP, the protocol that allows us to get pages from servers into our browsers.
 
-Why don’t the techniques that we use today work well when we need to be able to talk to all of the machines in the world?
+### Why don’t the techniques that we use today work well when we need to be able to talk to all of the machines in the world?
 
 - They weren't designed for that. When they started to design the web, the primary concern was to talk to a computer anywhere in the world, not many at once. They were designed to talk to a small group of machines.
 
-What is the HTTP protocol that Fielding and his friends created?
+### What is the HTTP protocol that Fielding and his friends created?
 
 - HTTP is protocol that allows our computers to use the web and obtain resources from other computers or servers around the world. HTTP is about applying verbs to nouns--for instance, HTTP uses a GET to obtain images to display.
 
-What does a GET do?
+### What does a GET do?
 
 - **GET** obtains resources (whatever it may be--image, text, video, etc.)
 
-What does a POST do?
+### What does a POST do?
 
 - When one system needs to *add* something to another system.
 
-What does PUT do?
+### What does PUT do?
 
 - When on system needs to *replace* something on another system.
 
-What does PATCH do?
+### What does PATCH do?
 
 - When one system needs to *partially update* something on another system.
 
