--- a/code301Notes/301-class-06.md
+++ b/code301Notes/301-class-06.md
@@ -4,41 +4,41 @@
 
 ## Node.js Intro
 
-What is node.js?
+### What is node.js?
 
 - Node.js is a program that we use to execute JavaScript on our computers. More specifically, it is a JavaScript runtime that is built on  Google Chrome's V8 JavaScript engine (with added file system API, HTTP library, and other features).
 
-In your own words, what is Chrome’s V8 JavaScript Engine?
+### In your own words, what is Chrome’s V8 JavaScript Engine?
 
 - Chrome's V8 JavaScript engine is what converts JavaScript code into code that your computer can actually execute. In my mind, it is a type of translator for code.
 
-What does it mean that node is a JavaScript runtime?
+### What does it mean that node is a JavaScript runtime?
 
 - It means that we use node to execute JavaScript on computers (or to make it run).
 
-What is npm?
+### What is npm?
 
 - **npm** is a *node package manager*. It is *the* package manager for JavaScript and has over 1 million different packages of JS code available to use.
 
-What version of node are you running on your machine?
+### What version of node are you running on your machine?
 
 - I am running  v16.13.2
 
-What version of npm are you running on your machine?
+### What version of npm are you running on your machine?
 
 - v8.8.0
 
-What command would you type to install a library/package called ‘jshint’?
+### What command would you type to install a library/package called ‘jshint’?
 
 - You would type in: `npm install -g jshint` (the `-g` means that we are installing it *globally* on our system and not locally)
 
-What is node used for?
+### What is node used for?
 
 - Node is used to put various libraries and building tools at our fingertips for development. You don't strictly *need* to use node, but it further builds out the tools at our disposal for our development environment. Some examples include: running tests, automatic code linting, style checking, React frameworks, making JS run on servers, etc. It is particularly advantages for building out applications that require real-time interaction or collaboration.
 
 ## Reasons for Pair Programming
 
-What are the 6 reasons for pair programming?
+### What are the 6 reasons for pair programming?
 
 1. **Greater Efficiency** - Catch mistakes, enhances technical skills, produces higher-quality code
 2. **Engaged Collaboration** - Experience is more engaging and keeps programmers focused
@@ -47,11 +47,11 @@ What are the 6 reasons for pair programming?
 5. **Job Interview Readiness** - Pair programming is a common interview technique
 6. **Work Environment Readiness** - Many companies use pair programming to train new hires in how their company approaches code
 
-In your experience, which of these reasons have you found most beneficial?
+### In your experience, which of these reasons have you found most beneficial?
 
 - I have enjoyed all of these benefits, and can clearly see the benefits of pair programming, however I have really enjoyed the engaged collaboration and learning from fellow students (and teaching them as well). It is amazing to see all of the different solutions there are for a problem when you can only see one yourself. It is certainly a technique that I will continue to use, and it has gotten me to seek help from my classmates more often.
 
-How does pair programming work?
+### How does pair programming work?
 
 - Typically, there are two different roles while pair programming: the **driver** and the **navigator**. The **driver** is the programmer who has their hands on the keyboard and is doing all of the writing of code, switching and creating files, handling version control, etc. The **navigator** is not writing any code, but they are thinking about ideas, what comes next, how to solve problems (and perhaps looking up documentation), and scanning for typos or mistakes. The **navigator** is not physically writing any of the code. Usually after a set amount of time, the roles can be reversed.
 
