--- a/code301Notes/301-class-09.md
+++ b/code301Notes/301-class-09.md
@@ -4,27 +4,27 @@
 
 ## Functional Programming Concepts
 
-What is functional programming?
+### What is functional programming?
 
 - Functional Programming is a programming paradigm that treats computation as the evaluation of mathematical functions, which avoids changing-state and mutable data.
 
-What is a pure function and how do we know if something is a pure function?
+### What is a pure function and how do we know if something is a pure function?
 
 - A pure function has to meet two criteria to meet a strict defintiion of purity:
 
 1. It returns the same result if given the same arguments (*deterministic*)
 2. It does not cause any observable side effects.
 
-What are the benefits of a pure function?
+### What are the benefits of a pure function?
 
 - Pure functions can be easier to understand and less complex because of it. They are stable, consistent, and predictable. Given the same parameters, they *will always* return the same result.
 - The code is easier to test.
 
-What is immutability?
+### What is immutability?
 
 - It means to be unchanging over time or unable to be changed. Immutable data's state cannot be changed after it is created. If you want to change and immutable object, you're outta luck--you can't. Instead, you must create a new object with a new value.
 
-What is Referential transparency?
+### What is Referential transparency?
 
 - If a function consistently yields the same result for the same input, it meets the criteria.
 - **pure function + immutable data = referential transparency**
