completes class 04 reading notes for code401 JS

--- a/code401Notes/401-class-04.md
+++ b/code401Notes/401-class-04.md
@@ -8,25 +8,43 @@
 
 #### What type of database is the best fit for the complex query intensive environment?
 
+SQL databases are the best fit for complex queries, as they are based on schema and more powerful than NoSQL databases.
+
 #### What type of database is the best fit for hierarchical data storage?
 
+NoSQL databases are good for hierarchical databases and databases that store large amounts of data.
+
 #### Describe the differences in scalability between a SQl and NoSQL database as though you were speaking to a non-technical friend
+
+SQL databases are vertically scalable. To add more power, you have to inncrease the power of your hardware. You can think of this as tuning/supercharging/boosting your car engine. To go faster, you bump up the horsepower. NoSQL database scalability is horizontal. Think of it as a bus route to pick up passengers. To increase the passenger load, you have to add more buses, giving them bigger engines and racing wheels won't really solve your problem.
 
 ### SQL Modeling Techniques
 
 #### Among data tables, what is a one-to-many relationship and how do we “relate” them?
 
+A one-to-many relationship is where one entry in one database can be related to more than one entry in another. We *relate* them by matching primary keys with foreign keys.
+
 #### Prior to designing your relational database, it might be useful to ___a___ of the database tables and their relationships
 
+It might be useful to create a diagram of the database and their relationships before designing!
+
 #### Explain the difference between a primary and foreign key
+
+Primary keys identify each row in a table. Tables typically have 1, but can have more. This is called a *compound key*. A foreign key is what is used to match a primary key from one table to another. This relationship between primary and foreign keys is what "glues" databases together.
 
 ### sql vs nosql Video
 
 #### How do we treat keywords and parameters differently in SQL syntax?
 
+Things are a little bit different in SQL, because we use SQL statements. A statement combines some keywords and parameters together to create a query.
+
 #### Define normalization within the context of schemas and data
 
+Normalization is about refining databases so that each table performs a single purpose. This increases performance and reduces errors because information is not duplicated. Normalization can go through three different forms. It is also difficult to institute data changes without normalization, from these difficulties, anomalies dealing with deleting, updating, and inserting are sure to surface.
+
 #### Explain the difference between one-to-one, one-to-many, and many-to-many relationships to a non-technical recruiter
+
+A one to one relationship can be thought of as two unique objects. For instance, I am the only owner of my car (by VIN), and my car only has one owner. A one-to-many is a shared car for our household. There is still only one car, but the car has many "owners" that use it, as we all pitch on maintaining and servicing the car. A many-to-many relationship could be thought of as a shared car collection. There are many owners of the collection, and many cars to be enjoyed by everyone from the collection.
 
 ## Sources
 
