--- a/code401Notes/401-class-07.md
+++ b/code401Notes/401-class-07.md
@@ -7,27 +7,36 @@
 ### Intro to JWT
 
 1. What is a JSON Web Token (JWT)?
-  - A **JWT** is a compact and self-contained way to securely transmit information between parties as a JSON object.
+  - A **JWT** is a compact and self-contained way to securely transmit information between parties as a JSON object. They can be verified and trusted because they are digitally signed.
 
 2. When should we use JSON Web Tokens?
+  - Authorization is the most common application for using JWT. Each of the request the user makes after logging into an application will include the JWT, signifying what resources they are permitted to access with that token.
+  - We may also want to use JWT for information exchange. We can verify senders are whom they say they are and that the content hasn't been tampered with.
 
 3. Claims are expected in which structural component of a JWT?
+  - Claims are expected in the payload component of a JWT.
 
 ### Are JWTs Secure
 
 1. If I get a JWT and I can decode the payload, how can we call that secure?
+  - Sure, you may be able to decode it, but you will not be able to tamper with it, or use it for your own devices if you don't have the proper matching secret key.
 
 2. If sending a JWT, what must sender and receiver both know? Hint, it’s appended in the signature.
+  - They must both know the **secret**.
 
 3. Explain how concatenated content and secret can be sent and received securely to a non-technical recruiter.
+  - A signing algorithm takes the header, payload, and the secret and creates a unique signature that cannot be easily faked or manipulated. Again, the information isn't encrypted (so it isn't hidden if intercepted), but you can't deconstruct it for tampering or improper access because all of the content combines for one signature tailored to all of that content.
 
 ### JWTs Explained
 
 1. Why use JWT?
+  - We should use JWT to securely transfer information between two bodies. It is digitally signed, so can be verified and trusted.
 
 2. JWT is Compact and self-contained. Describe how this is useful to a non-technical friend.
+  - Being small and compact means that using JWT is *fast* to use. Self-contained is helpful because it prevents us from hitting the server multiple times (the user's information is stored in the token, so we know they are verified).
 
 3. What are the three components (the structure) of a JWT signature?
+  - The three components of a JWT signature are: base64 encoded header, payload, and the secret.
 
 ## Sources
 
