completes class 08 reading notes

--- a/code401Notes/401-class-08.md
+++ b/code401Notes/401-class-08.md
@@ -8,25 +8,49 @@
 
 #### What is Role Based Access Control (RBAC) and why do we care?
 
+**RBAC** is the act of assigning system access to users based on their specific role in an organization. Basically, users are only granted access to systems based on their need. Do they only require read permissions? What about write or delete? Do they need access at all?
+
 #### Describe a Role/Permission heirarchy that you might implement using RBAC
 
+Admin, Moderator, User, Guest
+
 #### What approach might you take to implement RBAC?
+
+1. Inventory systems - What access needs to be controlled?
+2. Analyze workforce & create roles - Keep it simple!
+3. Assign people to roles - Do not have special cases for certain users!
+4. Periodically performs audits
 
 ### wiki - RBAC
 
 #### If Authentication is “you are who you say you are,” what is Authorization?
 
+Authorization is "you are allowed to access the requested resource/function".
+
 #### Name three primary rules defined for RBAC
 
+1. Role Assignment: Users must be assigned a role
+2. Role Authorization: A user's role must be granted permission for access/functionality
+3. Permission Authorization: Exercising the permission to perform a function/be granted access
 #### Describe RBAC to a non-technical friend
+
+RBAC is limiting and/or granting access to systems and functions based upon your role in an organization. If you worked at a store stocking shelves, you don't need access to the safe or cash registers. That being said, the cashier doesn't need access to the store's inventory database. The manager probably needs access to both.
 
 ### RBAC Tutorial
 
 #### What Are access rights Associated with? The User? or The Role? Explain
 
+Access rights are associated with the *role*, not the user. Users are, in turn, granted the appropriate role based on their requirements. Perhaps they are granted several roles. If access rights for a role need to be changed, the role itself is modified, and this covers all of the users that were associated with that role.
+
 #### Access Rights, or Authorization, is activated after a user successfully does what?
 
+After users successfully authenticate themselves with the system.
+
 #### Explain how RBAC might benefit a business
+
+Policy defines what access is granted to certain roles. Meaning that policy doesn't need to change when a certain person leaves the organization. RBAC is also easy to implement and grant the appropriate access to new employees coming into an organization.
+
+Companies need to limit the amount of access to users to the smallest amount of privilege needed to perform a certain function. This prevents the amount of damage that could be done to the organization in a worst-case scenario (possibly a bad actor).
 
 ## Sources
 
