updates table of contents, completes reading assignments for classes 9 and 10, begins notes for class 11

--- a/code401Notes/401-class-09.md
+++ b/code401Notes/401-class-09.md
@@ -6,6 +6,8 @@
 
 ### Discuss 2 possible project ideas that could be completed by you and a partner in the alloted time
 
-1.
+1. A notepad system, creating notes for a user.
 
-2.
+2. A post system, sharing notes between users.
+
+I was out for this assignment due to the birth of my child, so I was going off of what my group told me when I was gone!
