completes reading notes for class 11

--- a/code401Notes/401-class-11.md
+++ b/code401Notes/401-class-11.md
@@ -4,6 +4,18 @@
 
 ## Reading
 
+### What native Node.js module allows us to get started with Event Driven Programming?
+
+EventEmitter is a native module that allows this functionality. There are also some additional 3rd-party emitters available on npm that do the same thing but promise faster performance.
+
+### What is the value of Object Oriented Programming used in tandem with Event Driven Programming?
+
+Well, first of all, it is pretty awesome that object-oriented programming is so self-contained. As our applications become larger and more complex, we may want to introduce more functionality based on when certain events happen. The example in the reading was logging when new mail was sent. Instead of having to modify the functions within multiple objects, which would be very cumbersome in the very best case, we can use event-driven programming to add that functionality simply by listening for an action to happen instead of building it into the original objects. This can be a very powerful combination.
+
+### Consider your knowledge of Event Driven Programming in the Web Browser, now explain to a non-technical friend how Event Driven Programming might be useful on the backend using Node.js
+
+I think it really makes an application more efficient on the backend. Perhaps we want different API calls to different things, or to log information conditionally from one API, but not another. It really is, "hey server, when this thing specifically happens, I want you to do this action." It seems like it makes our servers a lot more agile and specific.
+
 ## Sources
 
 - [Event Driven Programming](https://www.digitalocean.com/community/tutorials/nodejs-event-driven-programming)
