completes class 14 reading notes

--- a/code401Notes/401-class-14.md
+++ b/code401Notes/401-class-14.md
@@ -1,11 +1,8 @@
 [Home](../README.md) > [Code 401 Topic Notes](../401topicNotes.md)
 
-# Class 11 Event Driven Programming
+# Class 14 - Event Driven Programming
 
-## Reading
+## Project Ideas
 
-### What native Node.js module allows us to get started with Event Driven Programming?
-
-## Sources
-
-- [Event Driven Programming](https://www.digitalocean.com/community/tutorials/nodejs-event-driven-programming)
+1. Castastrophe alert/reporting system - takes different catastrophes and reports survivors
+2. Complaint reporting system for organizations. Takes complaints from clients and sends dispositions.
